--- a/jade/layout.jade
+++ b/jade/layout.jade
@@ -44,37 +44,40 @@ html(lang='en')
               .btn-enquire
                 i.iconsp-35-enquire
                 span enquire
-              form.box-enquire.row
-                .box-left.col-md-3
-                  .title get in touch
-                  p.content Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                .box-center.col-md-5
-                  .form-group.row
-                    .col-md-6
-                      input.form-control(type="text" id="usr" placeholder="Name")
-                    .col-md-6
-                      input.form-control(type="text" id="usr" placeholder="Phone")
-                  .form-group.row
-                    .col-md-6
-                      input.form-control(type="text" id="usr" placeholder="Email")
-                    .col-md-6
-                      .select-style
-                        select.size
-                          option Enquire Type
-                          option General Enquiry
-                          option Quote
-                          option Carrers
-                          option Other
-                  .form-group
-                    input.form-control(type="text" id="usr" placeholder="Site Address")
-                  .form-group
-                    input.form-control(type="text" id="usr" placeholder="Company Name")
-                  .form-group
-                    textarea.form-control(type="text" id="usr" placeholder="Enquiry")
-                .box-right.col-md-3
-                  button.btn.btn-cancel(type="button") cancel
-                  button.btn.btn-upload(type="button") upload files
-                  button.btn.btn-submit(type="button") submit
+        form.box-enquire
+          .container
+            .row
+              .box-left.col-md-3
+                .title get in touch
+                p.content Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+              .box-center.col-md-5
+                .form-group.row
+                  .col-md-6
+                    input.form-control(type="text" id="usr" placeholder="Name")
+                  .col-md-6
+                    input.form-control(type="text" id="usr" placeholder="Phone")
+                .form-group.row
+                  .col-md-6
+                    input.form-control(type="text" id="usr" placeholder="Email")
+                  .col-md-6
+                    .select-style
+                      select.size
+                        option Enquire Type
+                        option General Enquiry
+                        option Quote
+                        option Carrers
+                        option Other
+                .form-group
+                  input.form-control(type="text" id="usr" placeholder="Site Address")
+                .form-group
+                  input.form-control(type="text" id="usr" placeholder="Company Name")
+                .form-group
+                  textarea.form-control(type="text" id="usr" placeholder="Enquiry")
+              .box-right.col-md-3
+                button.btn.btn-cancel(type="button") cancel
+                button.btn.btn-upload(type="button") upload files
+                button.btn.btn-submit(type="button") submit
+          .bg-contac-form: img(src = 'images/bottom-bg-form.png')
 
         #header-mobile.header
           ul#menu.menu
