--- a/html/scss/style.css
+++ b/html/scss/style.css
@@ -1003,6 +1003,73 @@ select {
       .page .footer ul li:nth-child(2) span:last-child {
         margin-left: 6px; }
 
+/* line 324, ../../jade/scss/_layout.scss */
+h1.title {
+  text-transform: uppercase;
+  font-family: "proxima_nova_extrabold";
+  text-align: center;
+  letter-spacing: 1px;
+  text-shadow: 1px 0 4px rgba(0, 0, 0, 0.4);
+  line-height: 64px; }
+
+/* line 333, ../../jade/scss/_layout.scss */
+.thankyou {
+  width: 438px;
+  background: #1A9FCF;
+  margin: 0 auto;
+  padding: 70px 59px 62px;
+  text-align: center;
+  position: relative; }
+  /* line 340, ../../jade/scss/_layout.scss */
+  .thankyou:after {
+    content: '';
+    display: inline-block;
+    width: 100%;
+    border-top: 45px solid #1A9FCF;
+    border-right: 437px solid transparent;
+    position: absolute;
+    left: 0;
+    bottom: -45px; }
+
+/* line 352, ../../jade/scss/_layout.scss */
+.thankyou h1 {
+  text-transform: uppercase;
+  font-size: 32px;
+  margin-bottom: 42px;
+  font-family: "proxima_nova_extrabold"; }
+
+/* line 359, ../../jade/scss/_layout.scss */
+.thankyou p {
+  font-size: 17px;
+  line-height: 30px;
+  margin-bottom: 30px;
+  font-family: "proxima_nova_regular"; }
+
+/* line 366, ../../jade/scss/_layout.scss */
+.thankyou span {
+  font-family: "roboto_condensed_bold";
+  background: #000;
+  padding: 8px 32px 4px;
+  text-transform: uppercase;
+  position: relative;
+  display: inline-block;
+  box-shadow: 1px 0 4px rgba(0, 0, 0, 0.4); }
+
+/* line 376, ../../jade/scss/_layout.scss */
+.thankyou span:after {
+  content: '';
+  position: absolute;
+  height: 10px;
+  width: 100%;
+  left: 0;
+  top: 28px;
+  /* background: #000; */
+  display: inline-block;
+  border-top: 10px solid #000;
+  border-left: 52px solid transparent;
+  border-right: 53px solid transparent;
+  cursor: pointer; }
+
 /* line 1, ../../jade/scss/_home.scss */
 .home-page {
   padding-bottom: 1px; }
