--- a/jade/scss/_layout.scss
+++ b/jade/scss/_layout.scss
@@ -320,3 +320,70 @@
   }
 
 }
+
+h1.title {
+  text-transform: uppercase;
+  font-family: $proxima_nova_extrabold;
+  text-align: center;
+  letter-spacing: 1px;
+  text-shadow: 1px 0 4px rgba(0, 0, 0, 0.4);
+  line-height: 64px;
+}
+
+.thankyou {
+  width: 438px;
+  background: #1A9FCF;
+  margin: 0 auto;
+  padding: 70px 59px 62px;
+  text-align: center;
+  position: relative;
+  &:after {
+    content: '';
+    display: inline-block;
+    width: 100%;
+    border-top: 45px solid #1A9FCF;
+    border-right: 437px solid transparent;
+    position: absolute;
+    left: 0;
+    bottom: -45px;
+  }
+}
+
+.thankyou h1 {
+  text-transform: uppercase;
+  font-size: 32px;
+  margin-bottom: 42px;
+  font-family: $proxima_nova_extrabold;
+}
+
+.thankyou p {
+  font-size: 17px;
+  line-height: 30px;
+  margin-bottom: 30px;
+  font-family: $proxima_nova_regular;
+}
+
+.thankyou span {
+  font-family: $roboto_condensed_bold;
+  background: #000;
+  padding: 8px 32px 4px;
+  text-transform: uppercase;
+  position: relative;
+  display: inline-block;
+  box-shadow: 1px 0 4px rgba(0, 0, 0, 0.4);
+}
+
+.thankyou span:after {
+  content: '';
+  position: absolute;
+  height: 10px;
+  width: 100%;
+  left: 0;
+  top: 28px;
+  /* background: #000; */
+  display: inline-block;
+  border-top: 10px solid #000;
+  border-left: 52px solid transparent;
+  border-right: 53px solid transparent;
+  cursor: pointer;
+}
