style contact page

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -125,7 +125,7 @@ block main
                 span Service Name
   .why-choose
     .background-before
-      img(src="images/before-why-choose.png" height="280")
+      img(src="images/before-why-choose.jpg" height="280")
     .container
       h1.title why choose patra group
       ul.row
@@ -140,7 +140,7 @@ block main
           p Benefit 1 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
       a(href="").read-more read more about us
     .background-after
-      img(src="images/after-why-choose.png" height="143")
+      img(src="images/after-why-choose.jpg" height="143")
   .testimonials
     .container
       h1.title testimonials
