--- a/jade/scss/_common.scss
+++ b/jade/scss/_common.scss
@@ -55,7 +55,7 @@ select {
 }
 
 .bg-blue {
-  background: $blue;
+  background: url('img/bg-blue.png');
 }
 
 ::-webkit-input-placeholder,
@@ -65,5 +65,5 @@ select {
   color: #757575;
 }
 .other-page {
-  padding: 100px 0 107px;
+  padding: 85px 0 107px;
 }
