--- a/jade/scss/_responsive.scss
+++ b/jade/scss/_responsive.scss
@@ -195,7 +195,7 @@
             background-repeat: no-repeat;
             background-size: cover;
             min-height: 500px;
-//            background-size: 800px;
+            //            background-size: 800px;
             background-position-x: 65%;
             img {
               display: none;
@@ -356,9 +356,37 @@
       }
     }
   }
+  .other-page {
+    padding: 54px 0 107px;
+  }
+  .contact-page {
+    .why-choose {
+      margin-top: 0;
+      h1.title {
+        margin-top: 0;
+      }
+      ul li {
+        padding-bottom: 20px;
+      }
+    }
+  }
+  .map-contact {
+    height: 520px;
+  }
+  .wrapper-contact .why-choose {
+    margin: 0 0 60px 0;
+    ul li {
+      span.content {
+        margin-bottom: 2px;
+      }
+      span.content-title {
+        margin-bottom: 0;
+      }
+    }
+  }
 }
 
-@media  screen and (max-width: 400px) {
+@media screen and (max-width: 400px) {
   ul.services-list {
     width: inherit;
   }
