Convert HTM/CSS Service page with Mobile version

--- a/jade/scss/_common.scss
+++ b/jade/scss/_common.scss
@@ -53,7 +53,12 @@ select {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-
+button {
+  &:active,
+  &:focus {
+    outline: none;
+  }
+}
 .bg-blue {
   background: $blue;
 }
