--- a/jade/scss/_responsive.scss
+++ b/jade/scss/_responsive.scss
@@ -8,6 +8,9 @@
 }
 
 @media only screen and (max-width: 1199px) and (min-width: 0px) {
+  .other-page {
+    padding: 54px 0 107px;
+  }
   ul.services-list {
     width: 300px;
     margin: 0 auto;
